add airsim realsense

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ django_test/__pycache__/
 copter/yolo3/__pycache__/
 django_test/blog/__pycache__/
 django_test/django_test/__pycache__/
+airsim_v2.0/__pycache__/
