--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ copter/__pycache__/
 copter/.vscode
 copter/yolo3/__pycache__/
 copter/yolo3/__pycache__/
-
+copter/trash_sea.mp4
 django_test/.vscode/
 django_test/__pycache__/
 django_test/blog/migrations/__pycache__/
